Fix : Scrollbar for long posts + Default width

--- a/custom.css
+++ b/custom.css
@@ -25,8 +25,9 @@
 }
 
 .drawer__inner {
-  overflow: visible;
   display: flex;
+  scrollbar-width: thin;
+  scrollbar-color: #282c39 #20232c;
 }
 
 .drawer__inner__mastodon {
@@ -127,6 +128,23 @@ body {
 
 .compose-form__publish-button-wrapper button {
   border-radius: 12px !important;
+}
+
+/* Default widths */
+.drawer { /* Left pannel */
+  width: 15%;
+}
+
+.column { /* Other pannels */
+  width: 17%;
+}
+
+.column:nth-of-type(2) { /* Second pannel (overriding “other pannels”) */
+  width: 27%;
+}
+
+.column:nth-of-type(4) { /* Fourth pannel (overriding “other pannels”) */
+  width: 22%;
 }
 
 /* Properly frame a custom of instance-specific bottom-left image */
