--- a/scss/piaille.scss
+++ b/scss/piaille.scss
@@ -1,2 +1,2 @@
-$img-url: "https://piaille.fr/system/site_uploads/files/000/000/001/original/bird1200x630.jpg";
+$img-url: "https://piaille.fr/system/accounts/headers/109/268/390/733/962/322/original/3e8ce35840f9b144.jpg";
 @import "custom.scss";
